// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: autofocus 1`] = `
<ValidationInput
  className="form-field"
  description="onboarding.create_project.project_key.description"
  isInvalid={false}
  isValid={false}
  labelHtmlFor="project-key"
  required={false}
>
  <input
    autoFocus={true}
    className="input-super-large"
    id="project-key"
    maxLength={400}
    minLength={1}
    onChange={[MockFunction]}
    type="text"
  />
</ValidationInput>
`;

exports[`should render correctly: default 1`] = `
<ValidationInput
  className="form-field"
  description="onboarding.create_project.project_key.description"
  isInvalid={false}
  isValid={false}
  labelHtmlFor="project-key"
  required={false}
>
  <input
    autoFocus={false}
    className="input-super-large"
    id="project-key"
    maxLength={400}
    minLength={1}
    onChange={[MockFunction]}
    type="text"
  />
</ValidationInput>
`;

exports[`should render correctly: invalid 1`] = `
<ValidationInput
  className="form-field"
  description="onboarding.create_project.project_key.description"
  error="bar.baz"
  isInvalid={true}
  isValid={false}
  labelHtmlFor="project-key"
  required={false}
>
  <input
    autoFocus={false}
    className="input-super-large is-invalid"
    id="project-key"
    maxLength={400}
    minLength={1}
    onChange={[MockFunction]}
    type="text"
  />
</ValidationInput>
`;

exports[`should render correctly: valid 1`] = `
<ValidationInput
  className="form-field"
  description="onboarding.create_project.project_key.description"
  isInvalid={false}
  isValid={true}
  labelHtmlFor="project-key"
  required={false}
>
  <input
    autoFocus={false}
    className="input-super-large is-valid"
    id="project-key"
    maxLength={400}
    minLength={1}
    onChange={[MockFunction]}
    type="text"
  />
</ValidationInput>
`;

exports[`should render correctly: validating 1`] = `
<ValidationInput
  className="form-field"
  description="onboarding.create_project.project_key.description"
  isInvalid={false}
  isValid={false}
  labelHtmlFor="project-key"
  required={false}
>
  <input
    autoFocus={false}
    className="input-super-large"
    id="project-key"
    maxLength={400}
    minLength={1}
    onChange={[MockFunction]}
    type="text"
  />
</ValidationInput>
`;

exports[`should render correctly: with label, help, and placeholder 1`] = `
<ValidationInput
  className="form-field"
  description="onboarding.create_project.project_key.description"
  help="foo.help"
  isInvalid={false}
  isValid={false}
  label="foo.label"
  labelHtmlFor="project-key"
  required={true}
>
  <input
    autoFocus={false}
    className="input-super-large"
    id="project-key"
    maxLength={400}
    minLength={1}
    onChange={[MockFunction]}
    placeholder="foo.placeholder"
    type="text"
  />
</ValidationInput>
`;

exports[`should render correctly: with value 1`] = `
<ValidationInput
  className="form-field"
  description="onboarding.create_project.project_key.description"
  isInvalid={false}
  isValid={false}
  labelHtmlFor="project-key"
  required={false}
>
  <input
    autoFocus={false}
    className="input-super-large"
    id="project-key"
    maxLength={400}
    minLength={1}
    onChange={[MockFunction]}
    type="text"
    value="foo"
  />
</ValidationInput>
`;
